server/check_output_mongo.txt
    Checking remote-party-finder v0.1.0 (E:\FF14\Repos\MyForks\remote-party-finder\server)
error[E0432]: unresolved imports `mongodb::options::UpdateOneModel`, `mongodb::options::WriteModel`
   --> src\mongo.rs:124:24
    |
124 | use mongodb::options::{UpdateOneModel, WriteModel};
    |                        ^^^^^^^^^^^^^^  ^^^^^^^^^^ no `WriteModel` in `options`
    |                        |
    |                        no `UpdateOneModel` in `options`

warning: unused import: `crate::listing::PartyFinderCategory`
 --> src\template\listings.rs:3:5
  |
3 | use crate::listing::PartyFinderCategory;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: the feature `let_chains` has been stable since 1.88.0 and no longer requires an attribute to enable
 --> src\main.rs:2:12
  |
2 | #![feature(let_chains)]
  |            ^^^^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

error[E0599]: no method named `bulk_write` found for struct `mongodb::Collection<T>` in the current scope
   --> src\mongo.rs:166:29
    |
166 |     let result = collection.bulk_write(writes, None).await.context("bulk upsert failed")?;
    |                             ^^^^^^^^^^ method not found in `mongodb::Collection<player::Player>`

error[E0282]: type annotations needed
   --> src\mongo.rs:166:18
    |
166 |     let result = collection.bulk_write(writes, None).await.context("bulk upsert failed")?;
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

warning: unused variable: `jp_servers`
   --> src\fflogs.rs:518:9
    |
518 |     let jp_servers = [
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_jp_servers`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0282, E0432, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `remote-party-finder` (bin "remote-party-finder") generated 3 warnings
error: could not compile `remote-party-finder` (bin "remote-party-finder") due to 3 previous errors; 3 warnings emitted
